New person icon was added. New pages were implemented (Making call, selecting place).

--- a/src/pages/main/main.html
+++ b/src/pages/main/main.html
@@ -10,8 +10,8 @@
   <div class="ppi-main-screen">
 
     <div class="ppi-main-screen_people">
-      <div class="ppi-main-screen_people__button" (click)="moveToPeople()" title="People">
-        <img src="assets/imgs/activities/walking.png"/>
+      <div class="ppi-circular-button ppi-circular-icon" (click)="moveToPeople()" title="People">
+        <img src="assets/imgs/person.png"/>
       </div>
     </div>
 
@@ -22,8 +22,8 @@
     </div>
 
     <div class="ppi-main-screen_activities">
-      <div class="ppi-main-screen_activities__button" (click)="moveToActivities()" title="Activities">
-        <img src="assets/imgs/activities/running.png"/>
+      <div class="ppi-circular-button ppi-circular-icon" (click)="moveToActivities()" title="Activities">
+        <img src="assets/imgs/activities/cycling.png"/>
       </div>
     </div>
 
