--- a/src/pages/activities/activities.html
+++ b/src/pages/activities/activities.html
@@ -9,19 +9,13 @@
 <ion-content padding>
   <div class="ppi-activities-screen">
 
-    <!-- <div #activeZone class="ppi-activities-screen__activities">
-      <div
-        *ngFor="let activity of activities"
-        [style.left.px]="positions[activity.id].x"
-        [style.top.px]="positions[activity.id].y"
-        class="ppi-circle">
-        <img [src]="activity.image"/>
-      </div>
-    </div> -->
     <div class="ppi-activities-screen_people">
-      <!-- <div class="ppi-activities-screen_people__button">
-        <img src="assets/imgs/activities/walking.png"/>
-      </div> -->
+      <div 
+        *ngIf="person"
+        class="ppi-circular-button ppi-circular-image"
+        (click)="changePerson()">
+        <img [src]="person.image"/>
+      </div>
     </div>
 
     <div class="ppi-greating">
@@ -36,7 +30,8 @@
           *ngFor="let activity of activities"
           [style.left.px]="positions[activity.id].x"
           [style.top.px]="positions[activity.id].y"
-          class="ppi-circle">
+          class="ppi-circle"
+          (click)="onSelectActivity(activity.ref)">
           <img [src]="activity.image"/>
         </div>
       </div>
