--- a/src/pages/activities/activities.html
+++ b/src/pages/activities/activities.html
@@ -31,12 +31,14 @@
           [id]="activity.id"
           [style.left.px]="positions[activity.id].x"
           [style.top.px]="positions[activity.id].y"
-          class="ppi-circle"
-          (click)="onSelectActivity(activity.ref)">
+          [ngClass]="{ 'ppi-circle': true, 'ppi-dragging-circle': activity.isDragged }"
+          (mousedown)="onCircleMouseDown($event, activity)">
           <img [src]="activity.image"/>
         </div>
       </div>
-      <div #obstacle class="ppi-dnd-button">
+      <div
+        #obstacle
+        [ngClass]="{ 'ppi-dnd-button': true, 'ppi-dnd-button-active': this.dragZoneIsActive }">
         Drag activity here
       </div>
     </div>
