--- a/src/pages/places/places.html
+++ b/src/pages/places/places.html
@@ -18,8 +18,11 @@
       </div>
 
       <div class="ppi-greating">
-          <div class="ppi-greating__circle">
+          <div *ngIf="!selectedPlace" class="ppi-greating__circle">
               Where do you want to go?
+          </div>
+          <div *ngIf="selectedPlace" class="ppi-greating__circle">
+              <img [src]="selectedPlace.image">
           </div>
       </div>
 
@@ -39,13 +42,15 @@
             Drag option here
           </div>
           <div class="ppi-places-screen_places__list">
-            <div
-              *ngFor="let place of places"
-              [ngClass]="{ 'ppi-place': true, 'ppi-dragging-circle': place.isDragged }"
-              [style.left.px]="place.isDragged ? place.position.x : null"
-              (mousedown)="onPlaceMouseDown($event, place)"
-              (touchstart)="onPlaceMouseDown($event, place)">
-              <img [src]="place.ref.image"/>
+            <div class="ppi-place-shadow" *ngFor="let place of places">
+              <div
+                [ngClass]="{ 'ppi-place': true, 'ppi-dragging-circle': place.isDragged }"
+                [style.left.px]="place.isDragged ? place.position.x : null"
+                (mousedown)="onPlaceMouseDown($event, place)"
+                (touchstart)="onPlaceMouseDown($event, place)"
+                (click)="onPlaceClick($event, place)">
+                <img [src]="place.ref.image"/>
+              </div>
             </div>
           </div>
           <div class="ppi-places-screen_places__basket">
