--- a/src/pages/editData/editData.html
+++ b/src/pages/editData/editData.html
@@ -8,5 +8,5 @@
 </ion-header>
 
 <ion-content padding>
- 
+  <page-edit-person *ngIf="user" [personId]="user.id"></page-edit-person>
 </ion-content>
