--- a/src/pages/editData/editPerson/editPerson.html
+++ b/src/pages/editData/editPerson/editPerson.html
@@ -1,14 +1,31 @@
-<ion-content padding>
- <ul class="fields-list" *ngIf="person">
-   <label>Name</label>
-   <input type="text" class="ppi-text-input" [(ngModel)]="person.name" (ngModelChange)="onChangeName()"/>
-   <label>Surname</label>
-   <input type="text" class="ppi-text-input" [(ngModel)]="person.surname" (ngModelChange)="onChangeName()"/>
-   <label>Full name</label>
-   <input type="text" class="ppi-text-input" [(ngModel)]="person.fullName" disabled/>
-   <label>Email</label>
-   <input type="text" class="ppi-text-input" [(ngModel)]="person.email"/>
-   <label>Image</label>
-   <input type="text" class="ppi-text-input" [(ngModel)]="person.image"/>
- </ul>
-</ion-content>
+<div class="ppi-edit-panel" *ngIf="person">
+  <h2>User</h2>
+  <div class="ppi-image">
+    <img [src]="person.image" class="ppi-image__image"/>
+  </div>
+  <ul class="ppi-fields-list">
+    <label>Name</label>
+    <input type="text" class="ppi-text-input" [(ngModel)]="person.name" (ngModelChange)="onChangeName()" [disabled]="!onSubmit"/>
+    <label>Surname</label>
+    <input type="text" class="ppi-text-input" [(ngModel)]="person.surname" (ngModelChange)="onChangeName()" [disabled]="!onSubmit"/>
+    <label>Full name</label>
+    <input type="text" class="ppi-text-input" [(ngModel)]="person.fullName" disabled/>
+    <label>Email</label>
+    <input type="text" class="ppi-text-input" [(ngModel)]="person.email" [disabled]="!onSubmit"/>
+    <label>Image</label>
+    <input type="text" class="ppi-text-input" [(ngModel)]="person.image" [disabled]="!onSubmit"/>
+    <div *ngIf="onSubmit">
+      <div
+        class="ppi-submit-button ppi-pull-right"
+        (click)="onSubmit(person)">
+        Save
+      </div>
+      <div
+        *ngIf="onRemove"
+        class="ppi-remove-button ppi-pull-right"
+        (click)="onRemove(targetPerson)">
+        Remove
+      </div>
+    </div>
+  </ul>
+</div>
