--- a/src/pages/editData/places/places.html
+++ b/src/pages/editData/places/places.html
@@ -9,7 +9,7 @@
     <li *ngFor="let place of places">
       <widget-edit-place
         [targetPlace]="place"
-        [onSubmit]="onUpdatePlace"
+        [onSubmit]="onSavePlace"
         [onRemove]="onRemovePlace"
       ></widget-edit-place>
     </li>
